8225371: TestLWorld.java fails with -DVerifyVM=true

Reviewed-by: thartmann