src/hotspot/share/c1/c1_Instruction.cpp
@@ -125,23 +125,6 @@ ciKlass* Instruction::as_loaded_klass_or_null() const {
   return NULL;
 }
 
-// FIXME -- this is used by ValueStack::merge_types only. We should remove this function
-// and use a better way for handling phi nodes.
-bool Instruction::is_flattened_array() const {
-  if (ValueArrayFlatten) {
-    ciType* type = declared_type();
-    if (type != NULL && type->is_value_array_klass()) {
-      ciValueKlass* element_klass = type->as_value_array_klass()->element_klass()->as_value_klass();
-      assert(element_klass->is_loaded(), "ciValueKlasses are always loaded");
-      if (element_klass->flatten_array()) {
-        return true;
-      }
-    }
-  }
-
-  return false;
-}
-
 bool Instruction::is_loaded_flattened_array() const {
   if (ValueArrayFlatten) {
     ciType* type = declared_type();
@@ -925,7 +908,7 @@ bool BlockBegin::try_merge(ValueStack* new_state) {
       TRACE_PHI(tty->print_cr("loop header block, initializing phi functions"));
 
       for_each_stack_value(new_state, index, new_value) {
-        new_state->setup_phi_for_stack(this, index, NULL, new_value);
+        new_state->setup_phi_for_stack(this, index);
         TRACE_PHI(tty->print_cr("creating phi-function %c%d for stack %d", new_state->stack_at(index)->type()->tchar(), new_state->stack_at(index)->id(), index));
       }
 
@@ -934,7 +917,7 @@ bool BlockBegin::try_merge(ValueStack* new_state) {
       for_each_local_value(new_state, index, new_value) {
         bool requires_phi = requires_phi_function.at(index) || (new_value->type()->is_double_word() && requires_phi_function.at(index + 1));
         if (requires_phi || !SelectivePhiFunctions) {
-          new_state->setup_phi_for_local(this, index, NULL, new_value);
+          new_state->setup_phi_for_local(this, index);
           TRACE_PHI(tty->print_cr("creating phi-function %c%d for local %d", new_state->local_at(index)->type()->tchar(), new_state->local_at(index)->id(), index));
         }
       }
@@ -993,7 +976,7 @@ bool BlockBegin::try_merge(ValueStack* new_state) {
         Phi* existing_phi = existing_value->as_Phi();
 
         if (new_value != existing_value && (existing_phi == NULL || existing_phi->block() != this)) {
-          existing_state->setup_phi_for_stack(this, index, existing_value, new_value);
+          existing_state->setup_phi_for_stack(this, index);
           TRACE_PHI(tty->print_cr("creating phi-function %c%d for stack %d", existing_state->stack_at(index)->type()->tchar(), existing_state->stack_at(index)->id(), index));
         }
       }
@@ -1007,7 +990,7 @@ bool BlockBegin::try_merge(ValueStack* new_state) {
           existing_state->invalidate_local(index);
           TRACE_PHI(tty->print_cr("invalidating local %d because of type mismatch", index));
         } else if (new_value != existing_value && (existing_phi == NULL || existing_phi->block() != this)) {
-          existing_state->setup_phi_for_local(this, index, existing_value, new_value);
+          existing_state->setup_phi_for_local(this, index);
           TRACE_PHI(tty->print_cr("creating phi-function %c%d for local %d", existing_state->local_at(index)->type()->tchar(), existing_state->local_at(index)->id(), index));
         }
       }
